# PatternsStorage

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
PatternsHolder/: main.cpp
PatternsHolder/Behavioral/SequenceOfResponsibility/: CMakeLists.txt  CommandContextParser.cpp  CommandContextParser.hpp  RunMinimalExample.hpp
PatternsHolder/Behavioral/State/: CMakeLists.txt  RunMinimalExample.hpp  SmartTeapot.cpp  SmartTeapot.hpp  TeapotState.hpp
PatternsHolder/Behavioral/Strategy/: CMakeLists.txt  Image.hpp  ImageInterpolator.cpp  ImageInterpolator.hpp  ImageLoader.hpp  ImageLoaderCreator.hpp  ImageProcessor.cpp  ImageProcessor.hpp  RunMinimalExample.hpp
PatternsHolder/Behavioral/Visitor/: CMakeLists.txt  Exceptions.hpp  Literals.hpp  MenuItemVisitor.cpp  MenuItemVisitor.hpp  MenuItems.cpp  MenuItems.hpp  Messages.hpp  RunMinimalExample.hpp
PatternsHolder/Creational/FactoryMethod/: CMakeLists.txt  ContextCreator.cpp  ContextCreator.hpp  RenderContext.cpp  RenderContext.hpp  RunMinimalExample.hpp
TestCmake/: CMakeLists.txt  TestCmake.cpp  TestCmake.h
